--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: java
 sudo: false
 jdk:
-  - oraclejdk9
-  - oraclejdk8
+#  - oraclejdk9
+  - oraclejdk6
 after_success:
   - bash <(curl -s https://codecov.io/bash)
