--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: java
 sudo: false
 jdk:
 #  - oraclejdk9
-  - oraclejdk6
+  - openjdk6
 after_success:
   - bash <(curl -s https://codecov.io/bash)
